--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.driver=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 #JWT Config
 jwt.secret=${JWT_SECRET}
+#Swagger Config
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.tryItOutEnabled=true
